data/test/type_check/fail/array_5.v
// Slice into a scalar value
wire x;
assign x[0] = 1;
